# geometry-central

docs/: test.py
docs/docs/numerical/: matrix_types.md
docs/docs/surface/algorithms/: geodesic_distance.md  vector_heat_method.md
docs/docs/surface/geometry/: geometry.md  quantities.md
docs/docs/surface/halfedge_mesh/: basics.md  boundaries.md  containers.md  navigation.md
docs/docs/utilities/: vector2.md  vector3.md
docs/test/: CMakeLists.txt
include/geometrycentral/combinatorial-maps/: combinatorial_map.h  combinatorial_map.ipp  combinatorial_map_element_types.h  combinatorial_map_element_types.ipp
include/geometrycentral/numerical/: linear_solvers.h  suitesparse_utilities.h
include/geometrycentral/surface/: barycentric_coordinate_helpers.h  boundary_first_flattening.h  edge_length_geometry.h  edge_length_geometry.ipp  exact_geodesics.h  flip_geodesics.h  halfedge_containers.h  halfedge_containers.ipp  halfedge_element_types.h  halfedge_element_types.ipp  halfedge_factories.h  halfedge_mesh.h  halfedge_mesh.ipp  heat_method_distance.h  integer_coordinates_intrinsic_triangulation.h  intrinsic_geometry_interface.h  intrinsic_triangulation.h  manifold_surface_mesh.h  mesh_graph_algorithms.h  meshio.h  mutation_manager.h  mutation_manager.ipp  normal_coordinates.h  polygon_soup_mesh.h  signpost_intrinsic_triangulation.h  simple_polygon_mesh.h  surface_mesh_factories.h  surface_point.h  surface_point.ipp  vector_heat_method.h
include/geometrycentral/utilities/: mesh_data.ipp  vector2.h  vector2.ipp  vector3.h  vector3.ipp
src/: CMakeLists.txt
src/numerical/: positive_definite_solvers.cpp  qr_solvers.cpp  square_solvers.cpp  suitesparse_utilities.cpp
src/surface/: boundary_first_flattening.cpp  common_subdivision.cpp  edge_length_geometry.cpp  flip_geodesics.cpp  geodesic_centroidal_voronoi_tessellation.cpp  heat_method_distance.cpp  integer_coordinates_intrinsic_triangulation.cpp  intrinsic_geometry_interface.cpp  intrinsic_triangulation.cpp  manifold_surface_mesh.cpp  mesh_graph_algorithms.cpp  meshio.cpp  mutation_manager.cpp  normal_coordinates.cpp  polygon_soup_mesh.cpp  signpost_intrinsic_triangulation.cpp  simple_polygon_mesh.cpp  surface_mesh.cpp  surface_mesh_factories.cpp  surface_point.cpp  trace_geodesic.cpp  vector_heat_method.cpp
